// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-send should send 304 with matching etag 1`] = `
Object {
  "etag": "W/\\"0-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=\\"",
}
`;

exports[`servie-send should send an empty response 1`] = `Object {}`;

exports[`servie-send should send json 1`] = `
Object {
  "content-length": "17",
  "content-type": "application/json",
  "etag": "W/\\"h-k6I5cakU5erL8KjSUVTNownDwccvu5kU1Hxg88toFYg=\\"",
}
`;

exports[`servie-send should send stream 1`] = `
Object {
  "content-type": "application/octet-stream",
}
`;

exports[`servie-send should send text 1`] = `
Object {
  "content-length": "11",
  "content-type": "text/plain",
  "etag": "W/\\"b-uU0nuZNNPgilLlLX2n2r+sSE7+N6U4DukIj3rOLvzek=\\"",
}
`;
